css/sections/s01-------to-be.css
/* ... */
.n-5-537 {
  width: 320px;
  height: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
}

.n-5-538 {
  width: 320px;
  height: auto;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 16px;
  font-weight: 700;
  line-height: 1.6;
  letter-spacing: -0.040em;
  word-break: keep-all;
  color: var(--c-212529);
}

.n-5-539 {
  width: 320px;
  height: auto;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 15px;
  font-weight: 400;
  line-height: 1.6;
  letter-spacing: -0.040em;
  word-break: keep-all;
  color: var(--c-212529);
}

.n-5-540 {
  z-index: 3;
  width: 320px;
  height: auto;
  display: flex;
  flex-direction: row;
  gap: 8px;
  justify-content: flex-start;
  align-items: center;
  flex-shrink: 0;
}

.n-5-541 {
  width: 320px;
  height: auto;
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
}

.n-5-542 {
  width: 320px;
  height: auto;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 16px;
  font-weight: 700;
  line-height: 1.6;
  letter-spacing: -0.040em;
  word-break: keep-all;
  color: var(--c-212529);
}

.n-5-543 {
  width: 320px;
  height: auto;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 15px;
  font-weight: 400;
  line-height: 1.6;
  letter-spacing: -0.040em;
  word-break: keep-all;
  color: var(--c-212529);
}

.n-5-544 {
  width: 360px;
  height: 130px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
  padding: 20px 20px 40px;
  background-color: var(--c-f3f3f3);
  overflow: hidden;
}

.n-5-545 {
  width: 320px;
  height: 70px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
  overflow: hidden;
}

.n-5-546 {
  position: relative;
  width: 320px;
  height: 70px;
  flex-shrink: 0;
  margin: 0 auto 0 0;
  background-color: var(--c-ff6200);
  border-radius: 10px;
}

.n-5-549 {
  position: absolute;
  top: -2.6px;
  left: 222.4px;
  z-index: 3;
  width: 75.1px;
  height: 75.1px;
  border-radius: 4px;
}

.n-5-555 {
  position: absolute;
  top: 8.6px;
  left: 8.6px;
  width: 58px;
  height: 58px;
  border-radius: 4px;
}

.n-5-558 {
  position: absolute;
  top: 24.6px;
  left: 19.6px;
  z-index: 5;
  width: 37px;
  display: block;
  font-family: var(--font-pretendard);
  font-size: 17px;
  font-weight: 900;
  line-height: 1.4;
  letter-spacing: -0.020em;
  word-break: keep-all;
  white-space: nowrap;
  color: var(--c-000000);
}

.n-5-548 {
  position: absolute;
  top: 11px;
  left: 15px;
  z-index: 2;
  width: 159px;
  display: block;
  opacity: 0.800000011920929;
  font-family: var(--font-pretendard);
  font-size: 14px;
  font-weight: 500;
  line-height: 1.4;
  letter-spacing: -0.040em;
  word-break: keep-all;
  white-space: nowrap;
  color: var(--c-ffffff);
}

.n-5-556 {
  position: absolute;
  top: 50%;
  left: 296px;
  z-index: 4;
  transform: translateY(-50%);
  width: 15px;
  height: 15px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  opacity: 0.6000000238418579;
}

.n-5-557 {
  width: 15px;
  height: 15px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
  padding: 3px 5px;
}

.n-I5-557-1982-34715 {
  width: 5px;
  height: 8.8px;
  flex-shrink: 0;
}

.n-5-547 {
  position: absolute;
  top: 33px;
  left: 15px;
  z-index: 1;
  width: 182px;
  display: block;
  font-family: var(--font-pretendard);
  font-size: 18px;
  font-weight: 700;
  line-height: 1.4;
  letter-spacing: -0.040em;
  word-break: keep-all;
  white-space: nowrap;
  color: var(--c-ffffff);
}

.n-5-559 {
  width: 360px;
  height: 1246px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-shrink: 0;
  background-color: var(--c-f3f3f3);
  overflow: hidden;
}

.n-5-560 {
  width: 360px;
  height: 1261px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-shrink: 0;
  padding: 40px 99px 65px 98px;
  background-color: var(--c-ffffff);
}

.n-5-561 {
  z-index: 1;
  width: 167px;
  height: 72px;
  flex-shrink: 0;
  margin: 0 0 42px 0;
  font-family: var(--font-pretendard);
  font-size: 26px;
  font-weight: 700;
  line-height: 1.4;
  letter-spacing: -0.040em;
  text-align: center;
  word-break: keep-all;
  white-space: pre-line;
  color: var(--c-212529);
}

.n-5-562 {
  position: relative;
  z-index: 2;
  width: 320px;
  height: 321px;
  flex-shrink: 0;
  margin: 0 0 20px 0;
  background-color: var(--c-ffffff);
  border: 1px solid var(--c-ffce22);
  border-radius: 10px;
  overflow: hidden;
}

.n-5-572 {
  position: absolute;
  top: 25px;
  left: 50%;
  z-index: 1;
  transform: translateX(-50%);
  width: 214px;
  height: 55px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: flex-start;
  align-items: center;
}

.n-5-573 {
  height: auto;
  align-self: stretch;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 14px;
  font-weight: 700;
  line-height: 1.19;
  letter-spacing: -0.030em;
  text-align: center;
  word-break: keep-all;
  white-space: nowrap;
  color: var(--c-f59f00);
}

.n-5-574 {
  height: auto;
  align-self: stretch;
  flex-shrink: 0;
  font-family: var(--font-pretendard);
  font-size: 20px;
  font-weight: 700;
  line-height: 1.4;
  letter-spacing: -0.040em;
  text-align: center;
  word-break: keep-all;
  white-space: nowrap;
  color: var(--c-212529);
}

.n-5-568 {
  position: absolute;
  top: 110px;
  left: 46px;
  width: 227px;
  height: 229px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0 0 18px;
}
/* ... */

